# fitbit-chart

./: .gitignore  Makefile  README.md  fitbit-chart.cabal  fitbit-demo.cabal  manifest.yaml  stack.yaml
Lib/App/: AWSConfig.hs  Log.hs  TokenConfig.hs  Util.hs
app/: App.hs  CommandLine.hs  FitbitDemoApp.hs  Main.hs
app/App/: AWSConfig.hs  AppConfig.hs  CommandLine.hs  Config.hs  DataAccess.hs  FitbitConfig.hs  Log.hs  Types.hs  Util.hs
app/FitbitDemoApp/: APIUtil.hs  AccessToken.hs  AppConfig.hs  AuthCode.hs  Config.hs  DataAccess.hs  OAuth2Helper.hs  RefreshToken.hs  TokenConfig.hs  Types.hs  Util.hs  WeightGoal.hs  WeightTimeSeries.hs
assets/: assets.yaml  chart.html  chart.js  config.yaml  deploy.rb  error.html  package.rb  upload
assets/lib/: s3.rb  shell.rb
cli/: CommandLine.hs  Main.hs
cli/FitbitChartCLI/: CommandLine.hs
lambda/: Main.hs  Util.hs
lambda/FitbitChartLambda/: Util.hs
lib/: App.hs  FitbitAPI.hs  FitbitChart.hs  FitbitDemo.hs  FitbitDemoLib.hs  Lambda.hs  Lib.hs  OAuth2.hs  Util.hs
lib/App/: AppConfig.hs  FitbitConfig.hs  TokenConfig.hs
lib/FitbitAPI/: Format.hs  IO.hs  Parser.hs  Period.hs  TimeSeriesRange.hs  Types.hs  WeightGoal.hs  WeightSample.hs  WeightTimeSeries.hs
lib/FitbitChart/: AWS.hs  App.hs  DataAccess.hs  DynamoDB.hs  Errors.hs  Fitbit.hs  FitbitAPI.hs  Params.hs  S3.hs  SSM.hs  Storage.hs  Util.hs
lib/FitbitChart/App/: Config.hs  DataAccess.hs  Util.hs
lib/FitbitChart/App/Config/: AWS.hs  App.hs  Fitbit.hs  Lambda.hs  OAuth2.hs
lib/FitbitChart/App/Util/: Log.hs  Util.hs
lib/FitbitChart/DataAccess/: Commands.hs  Types.hs
lib/FitbitChart/Fitbit/: Period.hs  TimeSeriesRange.hs  WeightGoal.hs  WeightSample.hs  WeightTimeSeries.hs
lib/FitbitChart/FitbitAPI/: Period.hs  TimeSeriesRange.hs  WeightGoal.hs  WeightSample.hs  WeightTimeSeries.hs
lib/FitbitChart/Params/: Commands.hs  Types.hs
lib/FitbitChart/SSM/: Commands.hs  Types.hs
lib/FitbitChart/Storage/: Commands.hs
lib/FitbitChart/Util/: Errors.hs  FileSystem.hs  Format.hs  IO.hs  Misc.hs  Parser.hs
lib/FitbitDemo/: Config.hs  IO.hs
lib/FitbitDemoLib/: APIUtil.hs  AppConfig.hs  AuthCode.hs  DateTime.hs  FitbitAPI.hs  Format.hs  HttpUtil.hs  IO.hs  OAuth2.hs  OAuth2App.hs  OAuth2Helper.hs  OAuth2Types.hs  OAuth2Util.hs  Parser.hs  TokenConfig.hs  Types.hs  Util.hs  WeightGoal.hs  WeightSample.hs  WeightTimeSeries.hs
lib/FitbitDemoLib/OAuth2/: AuthCode.hs
lib/Lib/: AWS.hs  DataAccess.hs  Errors.hs  FitbitAPI.hs  Params.hs  Storage.hs  Util.hs
lib/Lib/DataAccess/: Commands.hs  Types.hs
lib/Lib/FitbitAPI/: Period.hs  TimeSeriesRange.hs  WeightGoal.hs  WeightSample.hs  WeightTimeSeries.hs
lib/Lib/Params/: Commands.hs  Types.hs
lib/Lib/Storage/: Commands.hs
lib/Lib/Util/: FileSystem.hs  Format.hs  IO.hs  Misc.hs  Parser.hs
lib/OAuth2/: AccessToken.hs  App.hs  AuthCode.hs  RefreshToken.hs  Types.hs  Util.hs
lib/Util/: Format.hs  IO.hs  Parser.hs
params/: CommandLine.hs  Main.hs
params/FitbitChartParams/: CommandLine.hs
resources/: chart.js  index.js
script/: build.rb  create-table  delete  delete-table  deploy.rb  init  init.cmd  package.rb  scan  test-lambda  upload.rb
script/_old/: put-items
script/lib/: closed_struct.rb  iam.rb  interpreter.rb  json_payload.rb  lambda.rb  manifest.rb  package.rb  s3.rb  shell.rb  ssm.rb  sts.rb  temp.rb  tracer.rb
script/tasks/: build_package_task.rb  deploy_assets_task.rb  task.rb  update_function_task.rb  update_parameters_task.rb
test/: ConfigSpec.hs  FitbitDemoSpec.hs
token/: CommandLine.hs  Main.hs
