name:                                       fitbit-chart
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/fitbit-chart#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/fitbit-chart.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka
                                          , amazonka-core
                                          , amazonka-dynamodb
                                          , amazonka-s3
                                          , amazonka-ssm
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , cassava
                                          , directory
                                          , errors
                                          , filepath
                                          , lens
                                          , modern-uri
                                          , req
                                          , req-oauth2
                                          , split
                                          , text
                                          , time
                                          , unordered-containers
                                          , vector
                                          , yaml
  exposed-modules:                          FitbitChart.App
                                          , FitbitChart.App.Config
                                          , FitbitChart.App.Config.AWS
                                          , FitbitChart.App.Config.App
                                          , FitbitChart.App.Config.Fitbit
                                          , FitbitChart.App.Config.Lambda
                                          , FitbitChart.App.Config.OAuth2
                                          , FitbitChart.App.DataAccess
                                          , FitbitChart.App.Util
                                          , FitbitChart.App.Util.Log
                                          , FitbitChart.App.Util.Util
                                          , FitbitChart.AWS
                                          , FitbitChart.DynamoDB
                                          , FitbitChart.Fitbit
                                          , FitbitChart.Fitbit.Period
                                          , FitbitChart.Fitbit.TimeSeriesRange
                                          , FitbitChart.Fitbit.WeightGoal
                                          , FitbitChart.Fitbit.WeightSample
                                          , FitbitChart.Fitbit.WeightTimeSeries
                                          , FitbitChart.S3
                                          , FitbitChart.SSM
                                          , FitbitChart.SSM.Commands
                                          , FitbitChart.SSM.Types
                                          , FitbitChart.Util
                                          , FitbitChart.Util.Errors
                                          , FitbitChart.Util.FileSystem
                                          , FitbitChart.Util.Format
                                          , FitbitChart.Util.IO
                                          , FitbitChart.Util.Misc
                                          , FitbitChart.Util.Parser

executable fitbit-chart-cli
  default-language:                         Haskell2010
  hs-source-dirs:                           cli
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka-s3
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , fitbit-chart
                                          , modern-uri
                                          , optparse-applicative
                                          , req-oauth2
                                          , text
                                          , time
  other-modules:                            FitbitChartCLI.CommandLine

executable fitbit-chart-lambda
  default-language:                         Haskell2010
  hs-source-dirs:                           lambda
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka-s3
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , fitbit-chart
                                          , modern-uri
                                          , req-oauth2
                                          , serverless-haskell
                                          , text
                                          , time
  other-modules:                            FitbitChartLambda.Util

executable fitbit-chart-params
  default-language:                         Haskell2010
  hs-source-dirs:                           params
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , fitbit-chart
                                          , modern-uri
                                          , optparse-applicative
                                          , req-oauth2
                                          , text
                                          , unordered-containers
  other-modules:                            FitbitChartParams.CommandLine
