
name:                                       fitbit-demo
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/fitbit-demo#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/fitbit-demo.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , data-default-class
                                          , http-client
                                          , http-types
                                          , req
                                          , req-oauth2
                                          , text
                                          , time
                                          , vector
                                          , yaml
  exposed-modules:                          FitbitDemoLib
                                          , FitbitDemoLib.DateTime
                                          , FitbitDemoLib.HttpUtil
                                          , FitbitDemoLib.IO
                                          , FitbitDemoLib.OAuth2Helper
                                          , FitbitDemoLib.OAuth2Types
                                          , FitbitDemoLib.Parser
                                          , FitbitDemoLib.Types
                                          , FitbitDemoLib.Util
                                          , FitbitDemoLib.WeightGoal
                                          , FitbitDemoLib.WeightTimeSeries

executable fitbit-demo-app
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , base >= 4.7 && < 5
                                          , directory
                                          , errors
                                          , filepath
                                          , fitbit-demo
                                          , modern-uri
                                          , req
                                          , req-oauth2
                                          , text
                                          , time
                                          , transformers
  other-modules:                            FitbitDemoApp
                                          , FitbitDemoApp.AppConfig
                                          , FitbitDemoApp.TokenConfig
                                          , FitbitDemoApp.Util

test-suite fitbit-demo-test
  type:                                     exitcode-stdio-1.0
  default-language:                         Haskell2010
  hs-source-dirs:                           test
  main-is:                                  Spec.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  other-modules:                            ConfigSpec
  build-depends:                            base >= 4.7 && < 5
                                          , fitbit-demo
                                          , hspec
                                          , req-oauth2
