
name:                                       fitbit-demo
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/fitbit-demo#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/fitbit-demo.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka
                                          , amazonka-core
                                          , amazonka-dynamodb
                                          , amazonka-s3
                                          , amazonka-ssm
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , cassava
                                          , directory
                                          , errors
                                          , filepath
                                          , lens
                                          , modern-uri
                                          , req
                                          , req-oauth2
                                          , split
                                          , text
                                          , time
                                          , unordered-containers
                                          , vector
                                          , yaml
  exposed-modules:                          App
                                          , App.AWSConfig
                                          , App.AppConfig
                                          , App.FitbitConfig
                                          , App.Log
                                          , App.TokenConfig
                                          , App.Util
                                          , Lib
                                          , Lib.AWS
                                          , Lib.DataAccess
                                          , Lib.DataAccess.Commands
                                          , Lib.DataAccess.Types
                                          , Lib.Errors
                                          , Lib.FitbitAPI
                                          , Lib.FitbitAPI.Period
                                          , Lib.FitbitAPI.TimeSeriesRange
                                          , Lib.FitbitAPI.WeightGoal
                                          , Lib.FitbitAPI.WeightSample
                                          , Lib.FitbitAPI.WeightTimeSeries
                                          , Lib.Params
                                          , Lib.Params.Commands
                                          , Lib.Params.Types
                                          , Lib.Storage
                                          , Lib.Storage.Commands
                                          , Lib.Util
                                          , Lib.Util.FileSystem
                                          , Lib.Util.Format
                                          , Lib.Util.IO
                                          , Lib.Util.Misc
                                          , Lib.Util.Parser

executable fitbit-demo-cli
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka-s3
                                          , aws-easy
                                          , base >= 4.7 && < 5
                                          , fitbit-demo
                                          , modern-uri
                                          , optparse-applicative
                                          , req-oauth2
                                          , text
                                          , time
  other-modules:                            CommandLine
